--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
@@ -34,12 +35,45 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "latest",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.19.6",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "tailwindcss": "3.4.3",
+    "nativewind": "4.0.36",
+    "@gluestack-ui/overlay": "latest",
+    "@gluestack-ui/toast": "latest",
+    "@gluestack-ui/nativewind-utils": "latest",
+    "@gluestack-ui/accordion": "latest",
+    "@expo/html-elements": "latest",
+    "@legendapp/motion": "latest",
+    "@gluestack-ui/actionsheet": "latest",
+    "@gluestack-ui/alert": "latest",
+    "@gluestack-ui/alert-dialog": "latest",
+    "@gluestack-ui/avatar": "latest",
+    "@gluestack-ui/button": "latest",
+    "@gluestack-ui/checkbox": "latest",
+    "@gluestack-ui/divider": "latest",
+    "@gluestack-ui/fab": "latest",
+    "@gluestack-ui/form-control": "latest",
+    "@gluestack-ui/icon": "latest",
+    "@gluestack-ui/image": "latest",
+    "@gluestack-ui/input": "latest",
+    "@gluestack-ui/link": "latest",
+    "@gluestack-ui/menu": "latest",
+    "@gluestack-ui/modal": "latest",
+    "@gluestack-ui/popover": "latest",
+    "@gluestack-ui/pressable": "latest",
+    "@gluestack-ui/progress": "latest",
+    "@gluestack-ui/radio": "latest",
+    "@gluestack-ui/select": "latest",
+    "@gluestack-ui/slider": "latest",
+    "@gluestack-ui/spinner": "latest",
+    "@gluestack-ui/switch": "latest",
+    "@gluestack-ui/textarea": "latest",
+    "@gluestack-ui/tooltip": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -47,7 +81,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "jscodeshift": "0.15.2"
   },
   "private": true
 }
